# wvsc_tow_to_billing

./: .gitignore  .pylintrc  LICENSE  README.adoc  README.md  pyproject.toml
.github/workflows/: pylint.yml  python.yml  unittest.yml
Sample Data/: Member Invoice.csv  Vendor Bill.csv  tow_ticket_output.csv
sample_data/: October Invoices.xlsx  member_invoice.csv  tow_ticket_output.csv  vendor_bill.csv
src/tow_conversion/: __init__.py  converter.py  invoice.py  member_invoice.py  name.py  tow_data.py  vendor_bill.py
src/tow_conversion/cli/: create_invoices.py
src/tow_conversion/gui/: converter.py
unit_tests/: test_converter.py  test_invoice.py  test_member_invoice.py  test_name.py  test_pylint.py  test_tow_data.py  test_vendor_bill.py
unittests/: test_converter.py  test_tow_data.py
